Added styling and fixed rows

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
                     <a href="">Blog</a>
                     <a href="">Contact</a>
                 </li>
+                <h4>The best removals company in Belfast</h4>
             </ul>
         </div>
     </div>
     <div class="cta">
         <h1>Welcome to the best van show in town ye ha </h1>
         <br>
-        <button>Click to call</button>
+        <button class="orange">Click to call</button>
     </div>
 </body>
 </html>
