Added Rows, awaiting images for now

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
     <div class="header">
         <div class="logo">
-        <img src="https://via.placeholder.com/100x30" alt="">        </div>
+            <img src="https://via.placeholder.com/100x30" alt=""> </div>
         <div class="nav">
             <ul>
                 <li>
@@ -30,5 +32,65 @@
         <br>
         <button class="orange">Click to call</button>
     </div>
-</body>
-</html>
+
+    <div class="text-pannels">
+        <div class="left-pannel">
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure neque ipsum inventore,
+                sed, nesciunt eaque ullam quod minus eum odit necessitatibus molestias porro? Quibusdam, iure.
+                Distinctio
+                nam quaerat dolorum nemo exercitationem praesentium dolores neque, placeat sequi ipsum libero eius
+                accusamus sapiente recusandae harum? Iusto necessitatibus delectus dicta asperiores odio nam eius
+                officiis
+                possimus facilis a, beatae dolorum libero maiores nostrum molestiae distinctio quidem rerum nisi nulla?
+                Neque sed corporis quasi architecto nisi dolores repellat ipsum delectus molestiae corrupti autem
+                asperiores tenetur sunt quam doloribus quis quo, deleniti perferendis non voluptates doloremque. Odit
+                accusantium iure asperiores sapiente doloremque quos sed quibusdam, dolorem soluta, nisi ullam
+                molestiae
+                nihil cum? Hic rem asperiores necessitatibus ratione iusto unde animi in vel, aperiam est perferendis.
+                A
+                voluptas at sapiente suscipit blanditiis delectus doloribus cum accusamus. Nostrum corrupti aperiam
+                odio
+                qui iure. Maiores dicta non distinctio minima ipsum voluptate eligendi voluptatum consequuntur nihil a
+                illum placeat delectus totam, dolores corrupti iusto, alias tempore odio hic. Eaque iure aspernatur
+                possimus accusantium ab, perspiciatis expedita rem, voluptatum sint beatae alias minus quidem, quae
+                rerum
+                quasi. Consequatur quae esse, repudiandae voluptas similique doloribus magnam incidunt consectetur
+                delectus
+                illo iure commodi perferendis corrupti, fugiat ea placeat ullam vel animi adipisci. </p>
+        </div>
+        <div class="right-pannel">
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure neque ipsum inventore,
+                sed, nesciunt eaque ullam quod minus eum odit necessitatibus molestias porro? Quibusdam, iure.
+                Distinctio
+                nam quaerat dolorum nemo exercitationem praesentium dolores neque, placeat sequi ipsum libero
+                eius
+                accusamus sapiente recusandae harum? Iusto necessitatibus delectus dicta asperiores odio nam
+                eius officiis
+                possimus facilis a, beatae dolorum libero maiores nostrum molestiae distinctio quidem rerum
+                nisi nulla?
+                Neque sed corporis quasi architecto nisi dolores repellat ipsum delectus molestiae corrupti
+                autem
+                asperiores tenetur sunt quam doloribus quis quo, deleniti perferendis non voluptates
+                doloremque. Odit
+                accusantium iure asperiores sapiente doloremque quos sed quibusdam, dolorem soluta, nisi ullam
+                molestiae
+                nihil cum? Hic rem asperiores necessitatibus ratione iusto unde animi in vel, aperiam est
+                perferendis. A
+                voluptas at sapiente suscipit blanditiis delectus doloribus cum accusamus. Nostrum corrupti
+                aperiam odio
+                qui iure. Maiores dicta non distinctio minima ipsum voluptate eligendi voluptatum consequuntur
+                nihil a
+                illum placeat delectus totam, dolores corrupti iusto, alias tempore odio hic. Eaque iure
+                aspernatur
+                possimus accusantium ab, perspiciatis expedita rem, voluptatum sint beatae alias minus quidem,
+                quae rerum
+                quasi. Consequatur quae esse, repudiandae voluptas similique doloribus magnam incidunt
+                consectetur delectus
+                illo iure commodi perferendis corrupti, fugiat ea placeat ullam vel animi adipisci. </p> 
+            </div> 
+            </div>
+                    </body> </html>
