--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="">Blog</a>
                     <a href="">Contact</a>
                 </li>
-                <h4>The best removals company in Belfast</h4>
+                <h4>The best <strong>'Man with a van'</strong> company in Belfast</h4>
             </ul>
         </div>
     </div>
@@ -35,62 +35,55 @@
 
     <div class="text-pannels">
         <div class="left-pannel">
-
+            <h3>About Transporter Bridge</h3>
+            <p>We have been in business since 2010, Transporter Bridge has become the most trusted name for moving home
+                in Belfast. Our verified and trusted drivers make every move a safe and hassle free one. Our rates and
+                availability have earned us a reputation of being great value for money. We intend to turn our
+                customers into our best salespeople by doing such a great job that you will want to recommend us to
+                your friends!</p>
+            <h3>How we are better</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure neque ipsum inventore,
-                sed, nesciunt eaque ullam quod minus eum odit necessitatibus molestias porro? Quibusdam, iure.
-                Distinctio
-                nam quaerat dolorum nemo exercitationem praesentium dolores neque, placeat sequi ipsum libero eius
-                accusamus sapiente recusandae harum? Iusto necessitatibus delectus dicta asperiores odio nam eius
-                officiis
-                possimus facilis a, beatae dolorum libero maiores nostrum molestiae distinctio quidem rerum nisi nulla?
-                Neque sed corporis quasi architecto nisi dolores repellat ipsum delectus molestiae corrupti autem
-                asperiores tenetur sunt quam doloribus quis quo, deleniti perferendis non voluptates doloremque. Odit
-                accusantium iure asperiores sapiente doloremque quos sed quibusdam, dolorem soluta, nisi ullam
-                molestiae
-                nihil cum? Hic rem asperiores necessitatibus ratione iusto unde animi in vel, aperiam est perferendis.
-                A
-                voluptas at sapiente suscipit blanditiis delectus doloribus cum accusamus. Nostrum corrupti aperiam
-                odio
-                qui iure. Maiores dicta non distinctio minima ipsum voluptate eligendi voluptatum consequuntur nihil a
-                illum placeat delectus totam, dolores corrupti iusto, alias tempore odio hic. Eaque iure aspernatur
-                possimus accusantium ab, perspiciatis expedita rem, voluptatum sint beatae alias minus quidem, quae
-                rerum
-                quasi. Consequatur quae esse, repudiandae voluptas similique doloribus magnam incidunt consectetur
-                delectus
-                illo iure commodi perferendis corrupti, fugiat ea placeat ullam vel animi adipisci. </p>
+                Our company is not some not descript shady hobbyist you might find on the likes of classified ad
+                websites. We do this fulltime and have a dedicated team of drivers.
+            </p>
+            <h3>People Talk and that’s good for us</h3>
+            <p>Our reputation is our business, please see our recent reviews for an example of how we are doing. We
+                pride ourselves on being the most reliable company around. </p>
+            <h3>Dedicated to community </h3>
+            <p>
+                When it comes to our little corner of the world. Northern Ireland is renowned for having tight nit
+                communities. Our company is committed to doing our very best for those locally who rely on solid and
+                reputable customer service.
+            </p>
         </div>
         <div class="right-pannel">
-
+            <h3>
+                Our Staff
+            </h3>
+            <p>Our Belfast based man and van movers are veterans of the game. All kinds of removal services are
+                offered. From small rooms and little furniture to fully furnished home removals. No job is too big or
+                too small for our team. Our staff are available seven days per week from early morning to late in the
+                evening. So you can be sure that will be able to help at a time that suits you</p>
+            <h3>
+                Vehicle Types
+            </h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure neque ipsum inventore,
-                sed, nesciunt eaque ullam quod minus eum odit necessitatibus molestias porro? Quibusdam, iure.
-                Distinctio
-                nam quaerat dolorum nemo exercitationem praesentium dolores neque, placeat sequi ipsum libero
-                eius
-                accusamus sapiente recusandae harum? Iusto necessitatibus delectus dicta asperiores odio nam
-                eius officiis
-                possimus facilis a, beatae dolorum libero maiores nostrum molestiae distinctio quidem rerum
-                nisi nulla?
-                Neque sed corporis quasi architecto nisi dolores repellat ipsum delectus molestiae corrupti
-                autem
-                asperiores tenetur sunt quam doloribus quis quo, deleniti perferendis non voluptates
-                doloremque. Odit
-                accusantium iure asperiores sapiente doloremque quos sed quibusdam, dolorem soluta, nisi ullam
-                molestiae
-                nihil cum? Hic rem asperiores necessitatibus ratione iusto unde animi in vel, aperiam est
-                perferendis. A
-                voluptas at sapiente suscipit blanditiis delectus doloribus cum accusamus. Nostrum corrupti
-                aperiam odio
-                qui iure. Maiores dicta non distinctio minima ipsum voluptate eligendi voluptatum consequuntur
-                nihil a
-                illum placeat delectus totam, dolores corrupti iusto, alias tempore odio hic. Eaque iure
-                aspernatur
-                possimus accusantium ab, perspiciatis expedita rem, voluptatum sint beatae alias minus quidem,
-                quae rerum
-                quasi. Consequatur quae esse, repudiandae voluptas similique doloribus magnam incidunt
-                consectetur delectus
-                illo iure commodi perferendis corrupti, fugiat ea placeat ullam vel animi adipisci. </p> 
-            </div> 
-            </div>
-                    </body> </html>
+                A variety of different vehicles are used depending on the size of the job. From large trailers for
+                single pieces of furniture to miniature lorry’s for a full scale exodus. We have you covered, rarely
+                will more than one trip be necessary.
+            </p>
+            <h3>
+                Removals Prices
+            </h3>
+            <p>
+                Our removals prices are very competitive, with a movers van and workman driver helping to load and
+                unload will be priced generally at around £40 per hour. If additional hands are needed, additional
+                movers can be arranged for a nominal fee. Costs can vary depending on the size of job, time, location
+                and other various factors so please call for a quote.
+            </p>
+
+        </div>
+    </div>
+</body>
+
+</html>
