--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-    <!-- Header Start -->
-    <div class="header">
+    <div class="main">
+<!-- Header Start -->
+<div class="header">
         <div class="logo">
-            <img src="https://via.placeholder.com/100x30" alt=""> </div>
+            <img src="img/TransporterLogo.png" alt=""> </div>
         <div class="nav">
             <ul>
                 <li>
@@ -25,6 +26,7 @@
                     <a href="">Contact</a>
                 </li>
                 <h4>The best <strong>'Man with a van'</strong> company in Belfast</h4>
+
             </ul>
 
         </div>
@@ -32,7 +34,11 @@
     </div>
     <!-- Call to action start -->
     <div class="cta">
-        <h1>Welcome to the best van show in town ye ha </h1>
+        <h1>Man with a van services locally in Belfast. Serving surrounding 
+areas up to 30 miles away</h1>
+<h1>Get a reliable company with competitive prices  by clicking the button below to call
+        toll free on </h1>
+        <h1 class="phone-number">+44 7479 275900</h1>
         <br>
         <button class="orange">Click to call</button>
         <!-- Call to action end -->
@@ -86,7 +92,9 @@
         <!-- Text panels end -->
     </div>
     <!-- Horizontal Line -->
-    <hr>
+    <div class="horzline">
+        <hr>
+    </div>
     <!-- Footer Start -->
     <div class="footer">
         <div class="footer-links">
@@ -99,4 +107,6 @@
 
 </body>
 
+    </div>
+    
 </html>
